@@ -193,7 +193,7 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <version>2.17</version>
                         <configuration>
-                            <argLine>-Xms800m -Xmx1024m -XX:MaxPermSize=500m</argLine>
+                            <argLine>-Xms800m -Xmx1024m</argLine>
                             <systemPropertyVariables>
                                 <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                             </systemPropertyVariables>
